fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@ nav.vertical ul li{	display:block;}/* vertical menu */
 nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
+
+html {
+	overflow-x: hidden;
+	overflow: scroll;
+  } 
+  html, body {width: auto!important; overflow-x: hidden!important} 
 body {
 	background: '#fffff';
 	font-family: 'Open Sans', sans-serif;
